Move .mdx import into separate file

--- a/docs/docs/project-configuration-dev-test-build.mdx
+++ b/docs/docs/project-configuration-dev-test-build.mdx
@@ -3,7 +3,7 @@ title: Project Configuration
 description: Advanced project configuration
 ---
 
-import ReactPlayer from 'react-player'
+import ReactPlayer from './ReactPlayer'
 
 # Project Configuration: Dev, Test, Build
 
