--- a/.changesets/10469.md
+++ b/.changesets/10469.md
@@ -2,9 +2,18 @@
 
 The OG Gen saga continues with  @cannikin and @dac09 ⚔️
 
-This PR adds OgImageMiddleware and Hooks to `@redwoodjs/og-gen`.
+This PR:
+- adds OgImageMiddleware and Hooks to `@redwoodjs/og-gen`, complete with tests
 
-How to use this?
+⚠️ Template changes:
+- updates entry.client template to pass in Routes to App
+- updates App to take children (i.e. Routes)
+
+This is so that we can pass the OG component to be rendered _with_ your App's CSS setup.
+I've also coordinated with Tobbe on these changes so we don't need to change things again for server router. 
+
+
+**How to use this?**
 
 1. **Registering the middleware:**
     ```ts 
