Apply suggestions from code review
Co-authored-by: Tobbe Lundberg <tobbe@tlundberg.com>

--- a/.changesets/10469.md
+++ b/.changesets/10469.md
@@ -1,4 +1,4 @@
-- feat(og-gen): Implement middlware and hooks  (#10469) by @dac09
+- feat(og-gen): Implement middleware and hooks  (#10469) by @dac09
 
 The OG Gen saga continues with  @cannikin and @dac09 ⚔️
 
@@ -10,7 +10,6 @@ This PR:
 - updates App to take children (i.e. Routes)
 
 This is so that we can pass the OG component to be rendered _with_ your App's CSS setup.
-I've also coordinated with Tobbe on these changes so we don't need to change things again for server router. 
 
 
 **How to use this?**
