--- a/.changesets/10525.md
+++ b/.changesets/10525.md
@@ -1,6 +1,10 @@
 - feat(baremetal): Add verbose output to ssh exec (#10525) by @Tobbe
 
-Passing `--verbose` to the baremetal deploy command is supposed to give you more detailed info about what's happening. This is especially useful if something goes wrong and you get an error. Previously however passing `--verbose` didn't actually provide any extra information about why an SSH command might have failed. With this PR you'll now see what path it's trying to execute the command in, and what the exact error message was if it failed.
+Passing `--verbose` to the baremetal deploy command is supposed to give you
+more detailed info about what's happening. Previously however passing
+`--verbose` didn't actually provide any extra information. This PR adds logging
+to the new SshExecutor class so that you can see exactly what SSH commands are
+being run, and in what path.
 
 Standard output (this stays the same before and after)
 ![image](https://github.com/redwoodjs/redwood/assets/30793/588fcf3d-b059-42d2-a1af-d2fff8b3e4bd)
@@ -10,4 +14,4 @@ Standard output (this stays the same before and after)
 Doesn't really help much compared to the standard output 😅
 
 ## After (verbose output)
-![image](https://github.com/redwoodjs/redwood/assets/30793/02e42560-8e6e-439c-9dd8-1360ba673ffe)
+![image](https://github.com/redwoodjs/redwood/assets/30793/4a87bde4-072f-4bae-a84e-50ac72afe964)
