--- a/.changesets/10537.md
+++ b/.changesets/10537.md
@@ -1,8 +1,8 @@
 - fix(mw): Make invokeOptions a non-optional type (#10537) by @dac09
 
-The invokeOptions is always supplied when invoking middleware, but may not always be used. 
+When a middleware is executed (inside invoke), we _always_ pass options, even if the middleware function itself is can be undefined (if the middleware router doesn't match anything). 
 
-In order to do this, I had to change how middleware is invoked (use an object instead of parameters)
+In order to do this, I had to change how middleware is invoked (use an object instead of parameters), because `options` is a required parameter following an optional parameter `middleware`
 
 ```js
 // before
