--- a/.changesets/10586.md
+++ b/.changesets/10586.md
@@ -1,16 +1,30 @@
 - feat(middleware): Add .shortCircuit to MiddlewareResponse (#10586) by @dac09
 
-Adds a helper to generate a intercept/short-circuit response.
+Adds a helper to generate a intercept/short-circuit response, that will interrupt execution of _all_ middleware and react rendering, and immediately return the response. 
 
-This is just sugar around the syntax: making it clearer that the middleware will prevent react rendering when you respond with this helper:
+There's a few different ways you can use this, see examples below:
 
 ```ts
-const middleware = () => {
-// Before
- return new MiddlewareResponse(someBody, { status: 401 })
+const shortCircuitMw: Middleware = (req, res) => {
+  // A) You can short circuit after building the response (or use the res param)
+  // This allows you to use all the convenience helpers like cookies of MW Response
+  if (req.url.includes('create-new-response')) {
+    const shortCircuitResponse = new MiddlewareResponse('Short-circuiting')
+    shortCircuitResponse.headers.set('shortCircuit', 'yes')
+    shortCircuitResponse.cookies.set('shortCircuitCookie', 'do-not-allow', {
+      expires: new Date(Date.now() + 1000 * 60 * 60),
+    })
+    shortCircuitResponse.shortCircuit()
+  }
 
-// After
-return MiddlewareResponse.shortCircuit(someBody, 401) 
+  // B) You can directly construct a new short-circuit response
+  // (discarding whatever response was built before)
+  if (req.url.includes('using-existing-res')) {
+    return res.shortCircuit('Short-circuiting directly', {
+      headers: { shortCircuitDirect: 'yes' },
+    })
+  }
+
 }
 ```
 
