Update changset again

--- a/.changesets/10586.md
+++ b/.changesets/10586.md
@@ -20,7 +20,7 @@ const shortCircuitMw: Middleware = (req, res) => {
   // B) You can directly construct a new short-circuit response
   // (discarding whatever response was built before)
   if (req.url.includes('using-existing-res')) {
-    return res.shortCircuit('Short-circuiting directly', {
+    res.shortCircuit('Short-circuiting directly', {
       headers: { shortCircuitDirect: 'yes' },
     })
   }
