--- a/.changesets/10647.md
+++ b/.changesets/10647.md
@@ -4,6 +4,7 @@ This PR further the goal to enforce authentication and role permissions when ren
 
 PR changes:
 
-when auto loading the routes, construct the page import renders (from dist/ssr or from rsc) by passing the rscId and the roles
-builds from a map of pages and the route built from project routes instead of pages directory
-updates the render function to accept a set of route info
+* in rsc client, pass the route in the rw-rsc route
+// http://localhost:8910/rw-rsc//AboutPage?props=%7B%7D
+* in rsc handler, extract routePath, lookup route form manifest and use that to enforce auth
+* isRouteAllowed is mocked for moment
