--- a/.changesets/10680.md
+++ b/.changesets/10680.md
@@ -1,4 +1,4 @@
-- feat: Adds pageIdentifier to route manifest (#10680) by @dthyresson
+- chore: Adds pageIdentifier to route manifest (#10680) by @dthyresson
 
 This PR adds the `page_identifier_str` of `pageIdentifier` to the Route Manifest.
 
