--- a/.changesets/10656.md
+++ b/.changesets/10656.md
@@ -1,6 +1,6 @@
-- feat(rsc-auth): Implement extractRoles function in auth mw & update default ServerAuthState (#10656) by @dac09
+- feat(rsc-auth): Implement getRoles function in auth mw & update default ServerAuthState (#10656) by @dac09
 
-- Implement extractRoles function in supabase and dbAuth middleware
+- Implement getRoles function in supabase and dbAuth middleware
 - Updates default serverAuthState to contain roles
 - Make cookieHeader a required attribute
 - Introduces new `clear()` function to remove auth state - just syntax sugar
@@ -13,7 +13,7 @@ export const registerMiddleware = () => {
   const authMw = initDbAuthMiddleware({
     dbAuthHandler,
     getCurrentUser,
-    extractRoles: (decoded) => {
+    getRoles: (decoded) => {
       return decoded.currentUser.roles || []
     }
   })
