--- a/.changesets/10064.md
+++ b/.changesets/10064.md
@@ -1,67 +1,7 @@
-(Delete this help paragraph when you're done.) Thanks for writing a changeset! Here's a place to start.
-Don't edit the title, but in editing the body, try to explain what this PR means for Redwood users.
-The more detail the better. E.g., is it a new feature? How do they use it? Code examples go a long way!
-
 - Add Storybook (Vite) framework package (#10064) by @arimendelow
 
-# Overview
-This PR is the first step to migrating our Storybook integration from relying on Webpack to relying on Vite. Specifically, this PR:
-- Adds the [Storybook framework package](https://storybook.js.org/docs/contribute/framework) for RedwoodJS.
-  - This follows the modern Storybook pattern for providing required configuration for getting Storybook to work with a given framework/metaframework.
-  - For comparison, our current Webpack Storybook setup was written before framework packages were a thing, so its architected very differently. See the [@redwoodjs/testing](https://github.com/redwoodjs/redwood/tree/main/packages/testing) package for more information.
-  - The eventual goal is for this package to move into the Storybook codebase and be "officially" supported.
-  - This package was forked from the [`react-vite` framework package](https://github.com/storybookjs/storybook/tree/next/code/frameworks/react-vite).
-- Adds the `storybook-vite` CLI package, which is based on the existing `storybook` CLI package. The CLI package does two important things before running the Storybook command:
-  - Checks if the necessary project-side config files exist yet, and creates them if they don't.
-  - Creates the Mock Service Worker, which is necessary for Cell mocking.
+Adds:
+- Storybook framework package for using Storybook with Vite.
+- CLI package (command: `yarn rw sbv`) for running Storybook using Vite. CLI package additionally creates Mock Service Worker, and, on first run, the project-side Storybook config files.
 
-Importantly, the architecture of this (including duplicating files, etc.) is based on the eventual goal of removing the older Storybook integration files.
-
-# Proof
-This screen recording shows that the following works:
-
-- [x] Router
-- [x] Nested cells (waterfall)
-- [x] Auth
-
-![sbv demo](https://github.com/redwoodjs/redwood/assets/16390116/4e7e2197-33e9-41e2-8455-51792dd316aa)
-
-# Details
-This framework package is based on the proof of concept of getting Storybook working on RedwoodJS with Vite, which is documented [here](https://redwoodjs.notion.site/Shortest-Path-to-Storybook-Vite-A-Thought-Provoking-Guide-35a78e0f699445a1ae65e64eee43791a?pvs=25).
-
-Please see that and official Storybook framework package documentation to understand implementation details.
-
-# Outstanding
-- The console outputs are a bit noisy, and it seems like it's just noise. Do we want to address/silence this?
-- Testing?
-- Cleanup?
-- Finalize how we want to roll this out. For example:
-  - Do we want to add a console message to the current CLI that it'll be removed in a future/next major?
-  - How do we want to address the different CLI packages? Some options:
-    - Temporarily keep the existing one as `yarn redwood storybook`, and make the new one `yarn redwood storybook-vite`.
-    - Make the existing one `yarn redwood storybook-webpack`.
-      - I'm concerned that folks will not be aware of this, causing friction.
-- Based on the above, write migration guide.
-- ???
-
-# Trying it out
-
-First step is, of course, pulling down this branch.
-
-I've been testing this with the generated test project. If you want to do that, from the framework repo, first run:
-
-`yarn run build:test-project ../for-testing-storybook-vite`
-
-Then, over in your project, run `yarn rwfw project:tarsync` so that the module resolutions point to the ones in this branch.
-
-Then, I think because it hasn't yet been published anywhere, you'll need to manually add the new CLI package (yarn complains about not being able to find the packument when I try to get the CLI package to autoinstall):
-```sh
-yarn add -D @redwoodjs/cli-storybook-vite@7
-```
-
-Then, run:
-```sh
-yarn rw sbv
-```
-
-Your browser should then open to Storybook!
+Current Storybook (Webpack) users will need to manually migrate any additional Storybook config (mocks, etc.). The primary user-facing difference between the old and new Storybook integrations is that the config used by the old one lives in the `@redwoodjs/testing` package, and the config used by this new one lives in the user's `web/.storybook` directory.
