--- a/.changesets/10768.md
+++ b/.changesets/10768.md
@@ -3,3 +3,4 @@
 Adds:
 - Smoke tests for #10064 based on the existing smoke tests for Storybook Webpack, with minimal changes.
 - Small bug fix where Storybook doesn't fully load on first run (found during smoke tests development)
+- Unit tests for storybook-vite CLI (based on those from the dataMigrate CLI)
