--- a/.changesets/10538.md
+++ b/.changesets/10538.md
@@ -1,5 +1,6 @@
 - fix(serverauth): Export dbAuthMiddleware as default export to match supabase (#10538) by @dac09
 
+An example:
 ```js
 //before
 import { createDbAuthMiddleware } from '@redwoodjs/auth-dbauth-middleware'
