--- a/.changesets/10867.md
+++ b/.changesets/10867.md
@@ -1,9 +1,6 @@
 - breaking: remove webpack (#10867) by @Josh-Walker-GM
 
-This PR removes support for webpack. 
-
----
-To the person releasing, the follow are the breaking changes I have identified:
+This PR removes support for webpack. There are a number of breaking changes associated with removing a core component of previous versions. A list of such changes is:
 1. `prebuildWebFile` is function no longer exported from `@redwoodjs/babel-config` package
 2. `@redwoodjs/cli-storybook` has been removed
 3. `yarn rw build` no longer accepts the `--stats` flag
@@ -15,3 +12,5 @@ To the person releasing, the follow are the breaking changes I have identified:
 9. `@redwoodjs/testing` no longer provides storybook config files
 10. `@redwoodjs/testing` no longer provides a `StorybookProvider`
 11. The `webpack` bin has been removed from `@redwoodjs/web`
+
+You can also find more information on the upgrade guide.
