--- a/.changesets/10871.md
+++ b/.changesets/10871.md
@@ -1,4 +1,3 @@
 - feat(dbAuth): Automatically create User model in fresh projects (#10871) by @Tobbe
 
-Automatically create a `User` model in the project's `schema.prisma` when
-setting up dbAuth in a new project.
+Automatically create a `User` model in the project's `schema.prisma` when setting up dbAuth in a new project.
