--- a/.changesets/10873.md
+++ b/.changesets/10873.md
@@ -1,4 +1,3 @@
 - feat(router): add router useBlocker hook (#10873) by @xmaxcooking
 
-Add `useBlocker()` hook to router to allow blocking navigation. Most commonly
-used to prevent users from accidentally leaving a page with unsaved changes.
+Add `useBlocker()` hook to router to allow blocking navigation. Most commonly used to prevent users from accidentally leaving a page with unsaved changes.
