--- a/.changesets/10922.md
+++ b/.changesets/10922.md
@@ -1,4 +1,3 @@
 - feat(baremetal): Check for setup before running deploy (#10922) by @Tobbe
 
-Print a helpful error message if baremetal has not been setup before running
-`yarn rw deploy baremetal`.
+Print a helpful error message if baremetal has not been setup before running `yarn rw deploy baremetal`.
