--- a/.changesets/11176.md
+++ b/.changesets/11176.md
@@ -1,5 +1,6 @@
 - fix(api-server): Use createServer in all cases, to make fastify config consistent (#11176) by @dac09
 
-This PR removes all the cases where we use `createFastifyInstance` for the api server, and replaces it with `createServer`.
+[BREAKING] Removes serverConfig support, in favour of server file to configure your Fastify instance.
+You can still customise your server settings by running `yarn rw setup server-file` first. See docs for [Server File](https://docs.redwoodjs.com/docs/docker/#using-the-server-file)
 
-This makes sure that the API server config is always consistent - whether you use a server file or not. (createServer was only used when we had a server file before)
+This PR removes all the cases where we use `createFastifyInstance` for the api server, and replaces it with `createServer`. This makes sure that the API server config is always consistent - whether you use a server file or not.
