--- a/.changesets/10542.md
+++ b/.changesets/10542.md
@@ -1,4 +1,4 @@
-- Rename og component assets from *.png.jsx to just*.og.jsx (#10542) by @cannikin
+- Rename og component assets from _.png.jsx to just_.og.jsx (#10542) by @cannikin
 
 We ran into a conflict where you could name your component file something like `AboutPage.png.jsx` (where the returned content-type would be image/png). But, when you invoke `useOgImage()` to actually create the URL for a `<meta>` tag, you could instead use a different extension, like `.jpg`. Which one should win?
 
