--- a/.changesets/10680.md
+++ b/.changesets/10680.md
@@ -3,10 +3,10 @@
 This PR adds the `page_identifier_str` of `pageIdentifier` to the Route Manifest.
 
 Known what page belongs to the route can be useful to :
- 
-* ensure if rendering a page/component that it belongs to the route and its auth permissions
-* for visualizing routes
-* general completeness in the manifest with the Routes jsx in manifest form
+
+- ensure if rendering a page/component that it belongs to the route and its auth permissions
+- for visualizing routes
+- general completeness in the manifest with the Routes jsx in manifest form
 
 ## Example
 
