--- a/.changesets/10817.md
+++ b/.changesets/10817.md
@@ -10,8 +10,8 @@ The plgin for persisted operations lets one define what can bypass trusted docs 
 
 So, we can use that in the useTrustedDocuments plugin to just allow that specific request.
 
-const REDWOOD__AUTH_GET_CURRENT_USER_QUERY =
-  '{"query":"query __REDWOOD__AUTH_GET_CURRENT_USER { redwood { currentUser } }"}'
+const REDWOOD**AUTH_GET_CURRENT_USER_QUERY =
+'{"query":"query **REDWOOD\_\_AUTH_GET_CURRENT_USER { redwood { currentUser } }"}'
 When using Redwood Auth, we want to allow the known, trusted redwood.currentUser query to be executed without a persisted operation.
 
 This is because the currentUser query is a special case that is used to get the current user from the auth provider.
