--- a/.changesets/10420.md
+++ b/.changesets/10420.md
@@ -1,4 +1,4 @@
-- feat: [Auth] Common AuthProvider & use* changes for middleware auth #10420 by @dac09 and @dthyresson
+- feat: [Auth] Common AuthProvider & use\* changes for middleware auth #10420 by @dac09 and @dthyresson
 
 * First step of supporting Auth using middleware
 * Ensure backwards compatibility with non-SSR auth
@@ -6,7 +6,3 @@
 ### Breaking Change
 
 Removes `skipFetchCurrentUser` which was used by the no longer existing nHost auth provider, but could potentially have been used by custom auth.
-
-
-
-
