--- a/.changesets/10460.md
+++ b/.changesets/10460.md
@@ -1,8 +1,8 @@
 - chore(dbauth-mw): Refactor web side dbAuth creation (#10460) by @dac09
 
-This PR changes how the webside auth is initialised, by removing the `createMiddlewareAuth` function, instead it just detects it internally. 
+This PR changes how the webside auth is initialised, by removing the `createMiddlewareAuth` function, instead it just detects it internally.
 
-For dbAuth this is what it will looks like: 
+For dbAuth this is what it will looks like:
 
 ```js:web/src/auth.ts
 import {
@@ -23,13 +23,16 @@ export const { AuthProvider, useAuth } = createAuth(dbAuthClient)
 For other auth providers we are going to export a similar looking function:
 
 ```js
-import { createAuth, createSupabaseAuthClient } from '@redwoodjs/auth-supabase-web'
+import {
+  createAuth,
+  createSupabaseAuthClient,
+} from '@redwoodjs/auth-supabase-web'
 
 // This function is new, and just wraps creating supabase👇
 const supabaseClient = createSupabaseAuthClient({
   supabaseUrl: process.env.SUPABASE_URL || '',
   supabaseKey: process.env.SUPABASE_KEY || '',
-  middleware: true
+  middleware: true,
 })
 
 export const { AuthProvider, useAuth } = createAuth(supabaseClient)
