--- a/.changesets/10825.md
+++ b/.changesets/10825.md
@@ -4,8 +4,7 @@ Fixes https://github.com/redwoodjs/redwood/issues/10807
 
 If one used GraphQL fragments, when mocking the GraphQL query for use in Storybook, the `typename` for the data object must be included otherwise Apollo client cannot properly map the data.
 
-This PR 
+This PR
 
-* adds the typename to the cell generator templates
-* updates the testing and graphql mock and fragments documentation to show how properly defines mock data
-
+- adds the typename to the cell generator templates
+- updates the testing and graphql mock and fragments documentation to show how properly defines mock data
