--- a/.changesets/11238.md
+++ b/.changesets/11238.md
@@ -9,6 +9,6 @@ Background jobs have been sorely missed, but the time has come! (If you do want 
 - Named queues: you can schedule jobs in separate named queues and have a different number of workers monitoring each one—makes it much easier to scale your background processing
 - Priority: give your jobs a priority from 1 (highest) to 100 (lowest). Workers will sort available jobs by priority, working the most important ones first.
 - Configurable delay: run your job as soon as possible (default), wait a number of seconds before running, or run at a specific time in the future
-- Auto-retries with backoff: if your job fails it will back off at the rate of attempts ** 4 for a default of 24 tries, the time between the last two attempts is a little over three days.
+- Auto-retries with backoff: if your job fails it will back off at the rate of attempts \*\* 4 for a default of 24 tries, the time between the last two attempts is a little over three days.
 - Run inline: instead of scheduling to run in the background, run immediately
 - Integrates with Redwood's [logger](https://docs.redwoodjs.com/docs/logger): use your existing one in api/src/lib/logger or create a new one just for job logging
