--- a/.changesets/11469.md
+++ b/.changesets/11469.md
@@ -3,4 +3,9 @@
 Adds an early step to the `yarn rw deploy baremetal` command that checks to
 make sure there is enough free disk space on the server before continuing.
 
-You can skip this step by passing `--no-df` to the command.
+By default it will make sure there is at least 2048 MB (2 GB) of free disk space
+but this can be changed by setting the new `deploy.toml` option
+`freeSpaceRequired` to however many MB you want.
+
+You can skip this step by passing `--no-df` to the `deploy baremetal` command or
+setting `freeSpaceRequired` to `0`.
